name: Hets
version: 0.99
Description: The Heterogeneous Tool Set
homepage:https://github.com/spechub/Hets
License: LGPL
License-File: LICENSE.txt
Author:
  2007 Cui Jian
  2007 Hendrik Iben
  2007 Klaus Luettich
  2007 Paolo Torrini
  2007 Rainer Grabbe
  2008 Andy Gimblett
  2008 Heng Jiang
  2008 Igor Stassiy
  2008 Mingyi Liu
  2009 Christian Maeder
  2009 Dominik Luecke
  2009 Ewaryst Schulz
  2009 Liam O'Reilly
  2009 Markus Gross
  2009 Mihai Codescu
  2009 Razvan Pascanu
  2009 Thiemo Wiedemeyer
  2009 Till Mossakowski
  2010 Jonathan von Schroeder
  2010 Simon Ulbricht
  2010 Corneliu-Claudiu Prodescu
Maintainer: hets-devel@informatik.uni-bremen.de
Copyright: 2006-2014 DFKI GmbH Bremen, Uni Bremen
Stability: Experimental
build-type: Simple
Cabal-Version: >= 1.4

flag uniform
  description: use HTk and uDrawGraph binding form the uniform workbench
    svn co https://svn-agbkb.informatik.uni-bremen.de/uni/trunk uni
    http://www.informatik.uni-bremen.de/uDrawGraph

flag tar
  description: save VSE proofs in tar archives

flag unix
  description: install signal handler for interrupting using Ctrl-C

flag haskeline
  description: command line interface

flag hexpat
  description: haskell xml parsing library for the expat xml parser.

flag gtkglade
  description: gtk and glade packages for a better user interface

flag server
  description: hets as web interface based on wai-extra and warp

flag haxml
  description: convert Isabelle theories to development graphs

Executable hets
  Main-is: hets.hs
  build-depends:
      HTTP >= 4000.2.4
    , array >= 0.1.0.0
    , aterm >= 0.1.0.1
    , base >= 4.0.0.0
    , containers >= 0.1.0.1
    , directory >= 1.0.0.0
    , fgl >= 5.4.1.1
    , filepath
    , ghc-prim
    , transformers >= 0.2.0.0
    , mtl >= 2.0.0.0
    , network >= 2.1.0.0
    , old-time >= 1.0.0.0
    , parsec >= 2.1.0.0
    , pretty >= 1.0.0.0
    , process >= 1.0.1.1
    , split >= 0.1.2.3
    , time >= 1.1.3 && < 1.7
    , utf8-string
    , bytestring >= 0.9
    , xml >= 1.3.7 && < 1.4
  cpp-options: -DCASLEXTENSIONS -DRDFLOGIC
  ghc-options: -threaded -fcontext-stack=31

  if flag(uniform)
    build-depends:
        uni-events
      , uni-graphs >= 2.0 && < 3.0
      , uni-htk >= 2.0 && < 3.0
      , uni-reactor
      , uni-uDrawGraph >= 2.0 && < 3.0
      , uni-util >= 2.0 && < 3.0
    cpp-options: -DUNI_PACKAGE

  if flag(haxml)
    build-depends: HaXml >= 1.24 && < 2
    cpp-options: -DHAXML

  if flag(tar)
    build-depends: tar >= 0.3 && < 0.6
    cpp-options: -DTAR_PACKAGE

  if flag(unix)
    build-depends: unix >= 2.3.0.0
    cpp-options: -DUNIX

  if flag(haskeline)
    build-depends:
        haskeline >= 0.6 && < 0.8
    cpp-options: -DHASKELINE

  if flag(hexpat)
    build-depends:
        hexpat >= 0.11 && < 0.21
    cpp-options: -DHEXPAT

  if flag(gtkglade)
    build-depends:
        glade >= 0.11.1
      , gtk >= 0.11.2
    cpp-options: -DGTKGLADE

  if flag(server)
    build-depends:
        wai-extra >= 3.0 && < 4.0
      , wai >= 3.0 && < 4.0
      , warp >= 3.0 && < 4.0
      , http-types >= 0.6 && <= 1.0
      , text >= 0.5 && < 1.3
      , case-insensitive
      , random >= 1.0
    cpp-options: -DSERVER -DWARP3
