name:            aterm
version:         0.1.0.1
license:         GPL-2
license-file:    LICENSE.txt
author:          Klaus Luettich, Christian Maeder
maintainer:      Christian Maeder <Christian Maeder@dfki.de>
homepage:        https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk/atermlib
description:     Efficient serialisation via annotated terms.
                 Typeable Haskell values may be converted to and from aterms.
synopsis:        serialisation for Haskell values with sharing support
category:        Data, Parsing
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4
tested-with:     GHC ==6.10.4, GHC ==6.12.3, GHC ==7.0.4

library

  build-depends:   base >= 4.0 && < 5, ghc-prim, containers, array

  hs-source-dirs:  src

  exposed-modules:
      ATerm.AbstractSyntax
    , ATerm.Base64
    , ATerm.Conversion
    , ATerm.Diff
    , ATerm.Lib
    , ATerm.ReadWrite
    , ATerm.SimpPretty
    , ATerm.Unshared

  extensions: MagicHash

  ghc-options: -Wall
