name:            aterm
version:         0.1.0.2
license:         GPL-2
license-file:    LICENSE.txt
author:          Klaus Luettich, Christian Maeder
maintainer:      Christian Maeder <chr.maedere@web.de>
homepage:        https://github.com/spechub/Hets/tree/master/atermlib
description:     Efficient serialisation via annotated terms.
                 Typeable Haskell values may be converted to and from aterms.
synopsis:        serialisation for Haskell values with sharing support
category:        Data, Parsing
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.10
tested-with:     GHC ==8.6.5

library

  build-depends:   base >= 4.0 && < 5, ghc-prim, containers, array

  hs-source-dirs:  src

  exposed-modules:
      ATerm.AbstractSyntax
    , ATerm.Base64
    , ATerm.Conversion
    , ATerm.Diff
    , ATerm.Lib
    , ATerm.ReadWrite
    , ATerm.SimpPretty
    , ATerm.Unshared

  other-extensions: CPP, MagicHash

  default-language: Haskell98

  ghc-options: -Wall
