Name:           glade
Version:        0.12.5.0
License:        LGPL-2.1
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Manuel M T Chakravarty, Duncan Coutts
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.8
Stability:      provisional
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the glade library.
Description:    This library allows to load externally stored user interfaces into
                programs. This allows alteration of the interface without recompilation
                of the program.
                .
                Note that this functionality is now provided in gtk directly
                (as of version 2.12 of the gtk+ C lib) by the
                Graphics.UI.Gtk.Builder module.

Category:       Graphics
Tested-With:    GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.4, GHC == 7.2.1
Extra-Source-Files: SetupWrapper.hs SetupMain.hs Gtk2HsSetup.hs
					hierarchy.list

x-Types-File:       Graphics/UI/Gtk/Glade/Types.chs
x-Types-ModName:    Graphics.UI.Gtk.Glade.Types
x-Types-Forward:    *Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop
x-Types-Hierarchy:  hierarchy.list

Data-Dir:		demo
Data-Files:		calc/calc.glade
                calc/Calc.hs
                calc/CalcModel.hs
                calc/Makefile
                
                glade/GladeTest.hs
                glade/Makefile
                glade/simple.glade
                
                noughty/Cross.png
                noughty/License
                noughty/Makefile
                noughty/Nought.png
                noughty/noughty.glade
                noughty/NoughtyGlade.hs
                noughty/Noughty.hs
                
                profileviewer/Makefile
                profileviewer/ParseProfile.hs
                profileviewer/ProfileViewer.glade
                profileviewer/ProfileViewer.gladep
                profileviewer/ProfileViewer.hs
                
                scaling/London_Eye.jpg
                scaling/Makefile
                scaling/Mountains.jpg
                scaling/scaling.glade
                scaling/Scaling.hs
                scaling/Stones.jpg

Source-Repository head
  type:         git
  location:     https://github.com/gtk2hs/glade

Library
        build-depends:  base >= 4 && < 5,
                        glib >= 0.12.5.0 && < 0.13, 
                        gtk >= 0.12.5.0 && < 0.13
						
        build-tools:    gtk2hsC2hs >= 0.13.9,
                        gtk2hsHookGenerator, gtk2hsTypeGen
						
        exposed-modules:
          Graphics.UI.Gtk.Glade
        other-modules:
          Graphics.UI.Gtk.Glade.Types		  

        extensions:     ForeignFunctionInterface
		
        x-c2hs-Header:  glade/glade.h
        x-Types-Tag: libglade
        pkgconfig-depends: libglade-2.0 >= 2.0.0
