name:		HAIFA
version:	0.11
license:	GPL
license-file:	COPYING
maintainer:	S.Foster@dcs.shef.ac.uk
exposed-modules:
         Data.DynamicMap,
         Text.XML.Serializer,
         Text.XML.Serializer.Core,
         Text.XML.Serializer.Datatypes,
         Text.XML.Serializer.DefaultRules,
         Text.XML.Serializer.Encoders,
         Text.XML.Serializer.Derive,
         Network.Service,
         Org.W3.N2001.XMLSchema,
         Org.W3.N2001.XMLSchema_instance,
         Org.Xmlsoap.Schemas.Soap.Envelope,
         Text.XML.HXT.Aliases
build-depends:  base, network, mtl, html, regex-compat, syb-generics, HTTP, hxt, template-haskell
extensions:
        MultiParamTypeClasses,
        FunctionalDependencies,
	UndecidableInstances,
        TemplateHaskell
ghc-options: -O -fcontext-stack60
hs-source-dirs: src
